# grpc-custom-serializer

./: .travis.yml  BUILD  README.md  WORKSPACE  greeter.proto
cpp/: .gitignore  .ycm_extra_conf.py  BUILD  Makefile  README.md  client_main.cc  serialization.cc  serialization.h  server_main.cc
go/: .gitignore  BUILD.bazel  README.md  genproto.go
go/client/: BUILD.bazel  main.go
go/encoding/: BUILD.bazel  json.go
go/server/: BUILD.bazel  main.go
java/: README.md  pom.xml
java/src/main/java/com/github/yugui/grpc_custom_serializer/: BUILD.bazel  GreeterClient.java  GreeterDescriptions.java  GreeterServer.java
java/src/main/proto/: BUILD.bazel  greeter.proto
node/: gulpfile.js  package.json
node/src/: client.js  server.js
ruby/: .gitignore  BUILD  Gemfile  README.md  Rakefile  greeter_client.rb  greeter_serialization.rb  greeter_server.rb
ruby/lib/greeter/: client.rb  json_serialization.rb  server.rb
