package(default_visibility = ["//visibility:private"])

# gazelle:ignore

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_proto_library(
    name = "greeterproto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yugui/grpc-custom-serializer/go",
    proto = "//:greeterproto_proto",
)

go_library(
    name = "go_default_library",
    srcs = ["genproto.go"],
    embed = [":greeterproto_go_proto"],
    importpath = "github.com/yugui/grpc-custom-serializer/go",
    visibility = ["//go:__subpackages__"],
)
